--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -370,7 +370,7 @@
 
   <!-- Next Steps -->
   <h2>Next Steps</h2>
-  <p>What do you want to stuff into TImothy's ass?</p>
+  <p>What's up Bavaria?</p>
 
   <input type="hidden" #selection>
 
